--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsx-view-engine": "^0.1.0",
-    "mongoose": "^7.1.1",
+    "mongoose": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
